Changed Derby dependency to one without vulnerabilities